RESOLVED FIXED267748
ASSERTION FAILED: !m_deletionHasBegun under ~WebSWServerConnection for workers/message-port-gc.html
https://bugs.webkit.org/show_bug.cgi?id=267748
Summary ASSERTION FAILED: !m_deletionHasBegun under ~WebSWServerConnection for worker...
Fujii Hironori
Reported 2024-01-18 19:28:29 PST
ASSERTION FAILED: !m_deletionHasBegun under ~WebSWServerConnection for workers/message-port-gc.html Buildbot: builder WinCairo-64-bit-Debug-Tests build 21680 : 273189@main https://build.webkit.org/#/builders/727/builds/21680 ASSERTION FAILED: !m_deletionHasBegun C:\BW\WinCairo-64-bit-Debug-Build\build\WebKitBuild\Debug\WTF\Headers\wtf/RefCounted.h(55) : hasOneRef 1 00007FF8F5DE1B99 WTFCrash 2 00007FF8EA681C6D WTFCrashWithInfo 3 00007FF8EA68233A WTF::RefCountedBase::hasOneRef 4 00007FF8EA682208 WTF::RefCountedBase::applyRefDerefThreadingCheck 5 00007FF8EA687C08 WTF::RefCountedBase::ref 6 00007FF8EB4188BA WTF::Ref<WebCore::SWServer,WTF::RawPtrTraits<WebCore::SWServer> >::Ref 7 00007FF8EB4156D6 WebCore::SWServer::Connection::protectedServer 8 00007FF8EB40C664 WebKit::WebSWServerConnection::~WebSWServerConnection 9 00007FF8EB4187C9 WebKit::WebSWServerConnection::~WebSWServerConnection 10 00007FF8E4972C11 std::default_delete<WebCore::SWServer::Connection>::operator() 11 00007FF8E4972BC7 std::unique_ptr<WebCore::SWServer::Connection,std::default_delete<WebCore::SWServer::Connection> >::~unique_ptr 12 00007FF8E4972B77 WTF::KeyValuePair<WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType,WTF::ObjectIdentifierMainThreadAccessTraits>,std::unique_ptr<WebCore::SWServer::Connection,std::default_delete<WebCore::SWServer::Connection> > >::~KeyValuePair 13 00007FF8E4972AFD WTF::HashTable<WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType,WTF::ObjectIdentifierMainThreadAccessTraits>,WTF::KeyValuePair<WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType,WTF::ObjectIdentifierMainThreadAccessTraits>,std::unique_ptr<WebCore::SWServer::Connection,std::default_delete<WebCore::SWServer::Connection> > >,WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType,WTF::ObjectIdentifierMainThreadAccessTraits>,std::unique_ptr<WebCore::SWServer::Connection,std::default_delete<WebCore::SWServer::Connection> > > >,WTF::DefaultHash<WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType,WTF::ObjectIdentifierMainThreadAccessTraits> >,WTF::HashMap<WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType,WTF::ObjectIdentifierMainThreadAccessTraits>,std::unique_ptr<WebCore::SWServer::Connection,std::default_delete<WebCore::SWServer::Connection> >,WTF::DefaultHash<WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType,WTF::ObjectIdentifierMainThreadAccessTraits> >,WTF::HashTraits<WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType,WTF::ObjectIdentifierMainThreadAccessTraits> >,WTF::HashTraits<std::unique_ptr<WebCore::SWServer::Connection,std::default_delete<WebCore::SWServer::Connection> > >,WTF::HashTableTraits>::KeyValuePairTraits,WTF::HashTraits<WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType,WTF::ObjectIdentifierMainThreadAccessTraits> > >::deallocateTable 14 00007FF8E498616B WTF::HashTable<WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType,WTF::ObjectIdentifierMainThreadAccessTraits>,WTF::KeyValuePair<WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType,WTF::ObjectIdentifierMainThreadAccessTraits>,std::unique_ptr<WebCore::SWServer::Connection,std::default_delete<WebCore::SWServer::Connection> > >,WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType,WTF::ObjectIdentifierMainThreadAccessTraits>,std::unique_ptr<WebCore::SWServer::Connection,std::default_delete<WebCore::SWServer::Connection> > > >,WTF::DefaultHash<WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType,WTF::ObjectIdentifierMainThreadAccessTraits> >,WTF::HashMap<WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType,WTF::ObjectIdentifierMainThreadAccessTraits>,std::unique_ptr<WebCore::SWServer::Connection,std::default_delete<WebCore::SWServer::Connection> >,WTF::DefaultHash<WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType,WTF::ObjectIdentifierMainThreadAccessTraits> >,WTF::HashTraits<WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType,WTF::ObjectIdentifierMainThreadAccessTraits> >,WTF::HashTraits<std::unique_ptr<WebCore::SWServer::Connection,std::default_delete<WebCore::SWServer::Connection> > >,WTF::HashTableTraits>::KeyValuePairTraits,WTF::HashTraits<WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType,WTF::ObjectIdentifierMainThreadAccessTraits> > >::clear 15 00007FF8E4963D83 WTF::HashMap<WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType,WTF::ObjectIdentifierMainThreadAccessTraits>,std::unique_ptr<WebCore::SWServer::Connection,std::default_delete<WebCore::SWServer::Connection> >,WTF::DefaultHash<WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType,WTF::ObjectIdentifierMainThreadAccessTraits> >,WTF::HashTraits<WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType,WTF::ObjectIdentifierMainThreadAccessTraits> >,WTF::HashTraits<std::unique_ptr<WebCore::SWServer::Connection,std::default_delete<WebCore::SWServer::Connection> > >,WTF::HashTableTraits>::clear 16 00007FF8E4935DEC WebCore::SWServer::~SWServer 17 00007FF8EB351BCD std::default_delete<WebCore::SWServer>::operator() 18 00007FF8EB351B83 WTF::RefCounted<WebCore::SWServer,std::default_delete<WebCore::SWServer> >::deref 19 00007FF8EB351AFF WTF::DefaultRefDerefTraits<WebCore::SWServer>::derefIfNotNull 20 00007FF8EB333EA8 WTF::RefPtr<WebCore::SWServer,WTF::RawPtrTraits<WebCore::SWServer>,WTF::DefaultRefDerefTraits<WebCore::SWServer> >::~RefPtr 21 00007FF8EB31CB4F WebKit::NetworkSession::~NetworkSession 22 00007FF8EA703BF3 WebKit::NetworkSessionCurl::~NetworkSessionCurl 23 00007FF8EA703FC9 WebKit::NetworkSessionCurl::~NetworkSessionCurl 24 00007FF8EB2F7A61 std::default_delete<WebKit::NetworkSession>::operator() 25 00007FF8EB2CC747 std::unique_ptr<WebKit::NetworkSession,std::default_delete<WebKit::NetworkSession> >::~unique_ptr 26 00007FF8EB29B756 WebKit::NetworkProcess::destroySession 27 00007FF8EA937BF1 IPC::callMemberFunction<WebKit::NetworkProcess,WebKit::NetworkProcess,void (PAL::SessionID, WTF::CompletionHandler<void ()> &&),std::tuple<PAL::SessionID>,void ()>::<lambda_1>::operator()<PAL::SessionID> 28 00007FF8EA937B8D std::invoke<`lambda at C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WebKit\Platform\IPC\HandleMessage.h:146:9',PAL::SessionID> 29 00007FF8EA937B6A std::_Apply_impl<`lambda at C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WebKit\Platform\IPC\HandleMessage.h:146:9',std::tuple<PAL::SessionID>,0> 30 00007FF8EA937B32 std::apply<`lambda at C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WebKit\Platform\IPC\HandleMessage.h:146:9',std::tuple<PAL::SessionID> > 31 00007FF8EA93742E IPC::callMemberFunction<WebKit::NetworkProcess,WebKit::NetworkProcess,void (PAL::SessionID, WTF::CompletionHandler<void ()> &&),std::tuple<PAL::SessionID>,void ()> ERROR: 000001E8001767F0 - NetworkProcessProxy::didClose (Network Process crash) C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WebKit\UIProcess/Network/NetworkProcessProxy.cpp(473) : didClose NetworkProcess terminated (pid 13816) for reason: crash
Attachments
Fujii Hironori
Comment 1 2024-01-18 19:29:54 PST
273187@main is the culprit.
Radar WebKit Bug Importer
Comment 2 2024-01-18 20:55:47 PST
Chris Dumez
Comment 3 2024-01-18 20:57:02 PST
EWS
Comment 4 2024-01-18 22:01:52 PST
Committed 273209@main (f6f4ddfe7652): <https://commits.webkit.org/273209@main> Reviewed commits have been landed. Closing PR #22962 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.