ASSERTION FAILED: !m_deletionHasBegun under ~WebSWServerConnection for workers/message-port-gc.html https://bugs.webkit.org/show_bug.cgi?id=267748 rdar://121238091

Unreviewed, very partial revert of 273187@main to address the regression.

* Source/WebKit/NetworkProcess/ServiceWorker/WebSWServerConnection.cpp:
(WebKit::WebSWServerConnection::~WebSWServerConnection):

Canonical link: https://commits.webkit.org/273209@main